turmites.lessons.turmites.turmitecreator.TurmiteCreator.scala.error
Turmite:27: error: type mismatch;
 found   : (Int, Int, Int)
 required: Array[Int]
    rule(0)(0)=(1,RIGHT,0)
               ^Turmite:28: error: type mismatch;
 found   : (Int, Int, Int)
 required: Array[Int]
    rule(0)(1)=(1,RIGHT,1)
               ^Turmite:29: error: type mismatch;
 found   : (Int, Int, Int)
 required: Array[Int]
    rule(1)(0)=(0,NOTURN,0)
               ^Turmite:30: error: type mismatch;
 found   : (Int, Int, Int)
 required: Array[Int]
    rule(1)(1)=(0,NOTURN,1)
               ^